--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,15 +10,15 @@ jobs:
 
   test:
     name: Test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest 
 
     services:
       postgres:
         image: postgres:12-alpine
         env:
-          POSTGRES_USER: root
-          POSTGRES_PASSWORD: secret
-          POSTGRES_DB: simple_bank
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: adeleye
+          POSTGRES_DB: simplebank
         ports:
           - 5432:5432
         options: >-
