--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: adeleye
-          POSTGRES_DB: simplebank
+          POSTGRES_DB: simple_bank
         ports:
           - 5432:5432
         options: >-
